# afet-tensions

./: .zenodo.json  README.md  README_QUICKSTART.md  pyproject.toml
data/: desi_dr1_bao.yaml  hubble_tension_data.yaml  s8_measurements.yaml
src/afet_tensions/: __init__.py  benchmark.py  beta_hierarchy.py  cli.py  constants.py  crep_redshift.py  desi_prediction.py  euclid_prediction.py  hubble_tension.py  ligo_prediction.py  s8_tension.py  system.py
tests/: test_afet_tensions.py
