[project]
name = "afet-tensions"
version = "0.1.0"
description = "AFET β-Hierarchie → Kosmologische Spannungen (Hubble-Tension, S₈) — GenesisAeon Package 34"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Johann Römer", email = "joberoemer@gmail.com" }]
requires-python = ">=3.11"
keywords = ["cosmology", "hubble-tension", "s8-tension", "afet", "crep", "utac", "genesisaeon"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "numpy>=1.26",
    "scipy>=1.13",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
afet = "afet_tensions.cli:app"

[project.urls]
Homepage = "https://github.com/GenesisAeon/afet-tensions"
Repository = "https://github.com/GenesisAeon/afet-tensions"
Issues = "https://github.com/GenesisAeon/afet-tensions/issues"
Zenodo = "https://doi.org/10.5281/zenodo.17472834"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/afet_tensions"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "W", "UP", "C4", "SIM"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=afet_tensions --cov-report=term-missing -v"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
